# Speech-Pipeline

./: .gitignore  README.md  corpus.txt  lid_eval_report.json  lid_eval_report_2.json  pyproject.toml  requirements.txt
checkpoints/: antispoof_model.pt  antispoof_model_smoke.pt  lid_model.pt  lid_model_2.pt
lid_eval/: eval_segment_metadata.json
lid_eval/lid_prep/: lid_manifest.csv
lid_prep/: lid_manifest.csv
lid_prep/debug/: chunk_000000.json
lid_prep/frame_labels/: chunk_000000.npy  chunk_000001.npy  chunk_000002.npy  chunk_000003.npy  chunk_000004.npy  chunk_000005.npy  chunk_000006.npy  chunk_000007.npy  chunk_000008.npy  chunk_000009.npy  chunk_000010.npy  chunk_000011.npy  chunk_000012.npy  chunk_000013.npy  chunk_000014.npy  chunk_000015.npy  chunk_000016.npy  chunk_000017.npy  chunk_000018.npy  chunk_000019.npy  chunk_000020.npy  chunk_000021.npy  chunk_000022.npy  chunk_000023.npy  chunk_000024.npy  chunk_000025.npy  chunk_000026.npy  chunk_000027.npy  chunk_000028.npy  chunk_000029.npy  chunk_000030.npy  chunk_000032.npy  chunk_000033.npy  chunk_000034.npy  chunk_000035.npy  chunk_000036.npy  chunk_000037.npy  chunk_000038.npy  chunk_000039.npy  chunk_000040.npy  (+272 more)
lid_prep_subtitles/: lid_manifest.csv
lid_prep_subtitles/frame_labels/: chunk_000000.npy  chunk_000001.npy  chunk_000002.npy  chunk_000003.npy  chunk_000004.npy  chunk_000005.npy  chunk_000006.npy  (+308 more)
outputs/: attack_eval_report.json  attack_manifest.csv
raw_data/: lecture.en.srt  lecture.hi.srt  my_audio.txt
speech_pipeline/: __init__.py  config.py  evaluate.py  pipeline.py
(+66 files in other folders)
